--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Test3</string>
+    <string name="default_web_client_id">YOUR_CLIENT_ID_FROM_GOOGLE_SERVICES_JSON</string>
 </resources>
